Fix text alignment in control-bar

--- a/app/assets/stylesheets/screens/papers.css.scss
+++ b/app/assets/stylesheets/screens/papers.css.scss
@@ -14,7 +14,7 @@ $paper-trim-color: $tahi-tertiary;
     overflow: hidden;
     width: 680px;
     font-family: $tahi-article-font-family;
-    line-height: 32px;
+    line-height: 36px;
     white-space: nowrap;
     text-overflow: ellipsis;
 
